29.may (ws)
      - Do not update inspector if not visible. This prohibits the
        performance decrease after using the inspector.
27.may (la)
      - fix #5897: > and < are not read back from saved score
26.may (ws)
      - fix #5867: End Repeat disappears when creating multimeasure rests
24.may (ws)
      - fix remove segment
23.may (ws)
      - fix custom page size for printing and pdf output
      - fixed bug in pdf creation. Creation is now faster and Pdf's
        are smaller escpecially for large scores.
19.may (ws)
      - fixed some line drawings in glissando, arpeggio and rest which
        were truncated to integer precision
15.may (ws)
      - update ove import from Rui Fan
14.may (ws)
      - fix crash: loading a score with a selected measure repeat
      - fix: copy/paste of measure repeats
      - Removed gui elements for "midi remote control". This feature
        is postponed to the next release.
      - fix persistence of text colors
      - do not show ledger lines if staff lines are set invisible
13.may (ws)
      - fix #5744: grace notes do not transpose
      - fix #5732: second note in measure missing accidental
10.may (ws)
      - fix #5742: 0.9.5 score crashes 0.9.6 RC1
7.may (ws)
      - another fix for midi import (#4989). Playback onset of last
        note was wrong.
      - fix #5683: No cautionary time signatures when changing between
        two different time signatures of the same note value
5.may (ws)
      - fix capella import: stave ordering for a part when saving
      - fix crash on import of some *.cap files
3.may (ws)
      - read plugins also from local data dir
        on linux: $HOME/.local/share/data/MusE/MuseScore/plugins
      - fix #5641, #5644: change pitch of tied notes
2.may (ws)
      - fix #5441: calling appendPart() in plugin causes crash
1.may  (la)
      - fix #5547: file association on mac + double click in finder
29.apr (db)
      - fix import of MIDI files with .midi file extension
25.apr (ws)